[gd_scene load_steps=18 format=2]

[ext_resource path="res://scripts/Penguin.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/players/Cat.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/unlocks/accessories/StrawHat.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/unlocks/accessories/Noogler.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/unlocks/accessories/Burger.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/unlocks/accessories/Chef.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/unlocks/accessories/Crown.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/unlocks/accessories/Mushroom.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/unlocks/accessories/Rainbow.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/unlocks/accessories/Santa.png" type="Texture" id=10]
[ext_resource path="res://assets/sounds/Fart.wav" type="AudioStream" id=11]

[sub_resource type="Animation" id=1]
resource_name = "Flap"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("StrawHat:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 42.453, -38 ), Vector2( 42.4534, -34.9576 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "FlapLoop"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 0 ]
}

[sub_resource type="Animation" id=3]
length = 1.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 5 ), Vector2( 0, 10 ), Vector2( 0, 15 ), Vector2( 0, 10 ), Vector2( 0, 5 ), Vector2( 0, 0 ), Vector2( 0, -5 ), Vector2( 0, -10 ), Vector2( 0, -15 ), Vector2( 0, -10 ), Vector2( 0, -5 ) ]
}
tracks/1/type = "animation"
tracks/1/path = NodePath("FlapAnimationPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": PoolStringArray( "Flap" ),
"times": PoolRealArray( 0.6 )
}

[sub_resource type="Animation" id=4]
resource_name = "Flap"
step = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("StrawHat:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 6.889, -9 ), Vector2( 6.861, -7.431 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Noogler:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 8.50163, -8.00251 ), Vector2( 8.50163, -8.00251 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Burger:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 6.99085, -8.00231 ), Vector2( 6.99085, -8.02277 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Chef:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 6.99242, -8.9812 ), Vector2( 6.99242, -8.9812 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Crown:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 7.00175, -6.88802 ), Vector2( 7.00175, -6.88802 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Mushroom:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 6.99592, -8.48839 ), Vector2( 6.99592, -8.48839 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Rainbow:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 6.99484, -7.40888 ), Vector2( 6.99484, -7.40888 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Santa:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 4.49021, -8.40487 ), Vector2( 4.49021, -8.40487 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "FlapLoop"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 0 ]
}

[sub_resource type="Animation" id=6]
length = 1.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 5 ), Vector2( 0, 10 ), Vector2( 0, 15 ), Vector2( 0, 10 ), Vector2( 0, 5 ), Vector2( 0, 0 ), Vector2( 0, -5 ), Vector2( 0, -10 ), Vector2( 0, -15 ), Vector2( 0, -10 ), Vector2( 0, -5 ) ]
}

[node name="Cat" type="RigidBody2D"]
pause_mode = 2
position = Vector2( -1.61511, -1.20566 )
collision_layer = 2
collision_mask = 53
mass = 0.102041
gravity_scale = 16.0
contacts_reported = 5
contact_monitor = true
can_sleep = false
script = ExtResource( 1 )

[node name="PlayerSprite" type="Sprite" parent="."]
position = Vector2( 0, 4.73574 )
scale = Vector2( 5.5, 5.5 )
texture = ExtResource( 2 )
hframes = 3

[node name="IdleAnimationPlayer" type="AnimationPlayer" parent="PlayerSprite"]
anims/Flap = SubResource( 1 )
anims/FlapLoop = SubResource( 2 )
anims/Idling = SubResource( 3 )

[node name="FlapAnimationPlayer" type="AnimationPlayer" parent="PlayerSprite"]
playback_speed = 2.0
anims/Flap = SubResource( 4 )
anims/FlapLoop = SubResource( 5 )
anims/Idling = SubResource( 6 )

[node name="StrawHat" type="Sprite" parent="PlayerSprite"]
visible = false
position = Vector2( 6.861, -7.431 )
texture = ExtResource( 3 )

[node name="Noogler" type="Sprite" parent="PlayerSprite"]
visible = false
position = Vector2( 8.50163, -8.00251 )
texture = ExtResource( 4 )

[node name="Burger" type="Sprite" parent="PlayerSprite"]
visible = false
position = Vector2( 6.99085, -8.02277 )
texture = ExtResource( 5 )

[node name="Chef" type="Sprite" parent="PlayerSprite"]
visible = false
position = Vector2( 6.99242, -8.9812 )
texture = ExtResource( 6 )

[node name="Crown" type="Sprite" parent="PlayerSprite"]
visible = false
position = Vector2( 7.00175, -6.88802 )
texture = ExtResource( 7 )

[node name="Mushroom" type="Sprite" parent="PlayerSprite"]
visible = false
position = Vector2( 6.99592, -8.48839 )
texture = ExtResource( 8 )

[node name="Rainbow" type="Sprite" parent="PlayerSprite"]
visible = false
position = Vector2( 6.99484, -7.40888 )
texture = ExtResource( 9 )

[node name="Santa" type="Sprite" parent="PlayerSprite"]
visible = false
position = Vector2( 4.49021, -8.40487 )
texture = ExtResource( 10 )

[node name="PoopPoint" type="Node2D" parent="."]
position = Vector2( -35.4809, 30.9764 )

[node name="Collision0" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2( 192.978, 2.10751 )
scale = Vector2( 1.25, 1.25 )
polygon = PoolVector2Array( -125.755, -25.9045, -118.527, -20.377, -106.409, -6.66449, -106.727, 0.776414, -125.861, 17.8905, -114.168, 28.2014, -122.034, 35.7486, -128.412, 35.4297, -140.849, 23.3117, -178.054, 23.6306, -195.487, 36.3864, -206.01, 28.9455, -201.865, 22.355, -194.849, 18.2094, -194.49, 0.276597, -192.107, -5.32214, -199.612, -10.2062, -202.947, -12.8268, -202.352, -24.1434, -192.829, -30.9006, -186.133, -26.2234, -191.979, -16.5503, -177.416, -5.07001, -170.826, -27.6053, -155.944, -23.8849, -144.251, -9.32196, -141.7, -22.8219, -135.853, -26.8612 )

[node name="PoopAudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -9.0
[connection signal="body_entered" from="." to="." method="_on_PenguinRigidBody_body_entered"]
