[gd_scene load_steps=17 format=2]

[ext_resource path="res://scripts/Penguin.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/players/Penguin.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/unlocks/accessories/StrawHat.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/unlocks/accessories/Noogler.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/unlocks/accessories/Burger.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/unlocks/accessories/Chef.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/unlocks/accessories/Crown.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/unlocks/accessories/Mushroom.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/unlocks/accessories/Rainbow.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/unlocks/accessories/Santa.png" type="Texture" id=10]

[sub_resource type="Animation" id=1]
resource_name = "Flap"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("StrawHat:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 42.453, -38 ), Vector2( 42.4534, -34.9576 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "FlapLoop"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 0 ]
}

[sub_resource type="Animation" id=3]
length = 1.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 5 ), Vector2( 0, 10 ), Vector2( 0, 15 ), Vector2( 0, 10 ), Vector2( 0, 5 ), Vector2( 0, 0 ), Vector2( 0, -5 ), Vector2( 0, -10 ), Vector2( 0, -15 ), Vector2( 0, -10 ), Vector2( 0, -5 ) ]
}
tracks/1/type = "animation"
tracks/1/path = NodePath("FlapAnimationPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": PoolStringArray( "Flap" ),
"times": PoolRealArray( 0.6 )
}

[sub_resource type="Animation" id=4]
resource_name = "Flap"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("StrawHat:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 42.453, -45 ), Vector2( 42.4534, -34.9576 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Noogler:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 53.939, -42 ), Vector2( 53.939, -36 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Burger:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 42.594, -42 ), Vector2( 42.594, -37 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Chef:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 42.594, -46.5 ), Vector2( 42.594, -41.75 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Crown:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 42.594, -37.15 ), Vector2( 42.594, -32.15 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Mushroom:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 42.594, -49.4 ), Vector2( 42.594, -44.4 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Rainbow:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 42.594, -39.5 ), Vector2( 42.594, -34.5 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Santa:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 33, -43.7 ), Vector2( 33, -38.7 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "FlapLoop"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 0 ]
}

[sub_resource type="Animation" id=6]
length = 1.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 5 ), Vector2( 0, 10 ), Vector2( 0, 15 ), Vector2( 0, 10 ), Vector2( 0, 5 ), Vector2( 0, 0 ), Vector2( 0, -5 ), Vector2( 0, -10 ), Vector2( 0, -15 ), Vector2( 0, -10 ), Vector2( 0, -5 ) ]
}

[node name="Penguin" type="RigidBody2D"]
pause_mode = 2
position = Vector2( -1.61511, -1.20566 )
collision_layer = 2
collision_mask = 53
mass = 0.102041
gravity_scale = 16.0
contacts_reported = 5
contact_monitor = true
can_sleep = false
script = ExtResource( 1 )

[node name="PenguinSprite" type="Sprite" parent="."]
position = Vector2( 0, 4.73574 )
scale = Vector2( 1.25, 1.25 )
texture = ExtResource( 2 )
hframes = 3

[node name="IdleAnimationPlayer" type="AnimationPlayer" parent="PenguinSprite"]
anims/Flap = SubResource( 1 )
anims/FlapLoop = SubResource( 2 )
anims/Idling = SubResource( 3 )

[node name="FlapAnimationPlayer" type="AnimationPlayer" parent="PenguinSprite"]
playback_speed = 2.0
anims/Flap = SubResource( 4 )
anims/FlapLoop = SubResource( 5 )
anims/Idling = SubResource( 6 )

[node name="StrawHat" type="Sprite" parent="PenguinSprite"]
visible = false
position = Vector2( 42.4534, -34.9576 )
scale = Vector2( 4.8, 4.8 )
texture = ExtResource( 3 )

[node name="Noogler" type="Sprite" parent="PenguinSprite"]
visible = false
position = Vector2( 53.939, -36 )
scale = Vector2( 4.8, 4.8 )
texture = ExtResource( 4 )

[node name="Burger" type="Sprite" parent="PenguinSprite"]
visible = false
position = Vector2( 42.594, -37 )
scale = Vector2( 4.8, 4.8 )
texture = ExtResource( 5 )

[node name="Chef" type="Sprite" parent="PenguinSprite"]
visible = false
position = Vector2( 42.594, -41.75 )
scale = Vector2( 4.8, 4.8 )
texture = ExtResource( 6 )

[node name="Crown" type="Sprite" parent="PenguinSprite"]
visible = false
position = Vector2( 42.594, -32.15 )
scale = Vector2( 4.8, 4.8 )
texture = ExtResource( 7 )

[node name="Mushroom" type="Sprite" parent="PenguinSprite"]
visible = false
position = Vector2( 42.594, -44.4 )
scale = Vector2( 4.8, 4.8 )
texture = ExtResource( 8 )

[node name="Rainbow" type="Sprite" parent="PenguinSprite"]
visible = false
position = Vector2( 42.594, -34.5 )
scale = Vector2( 4.8, 4.8 )
texture = ExtResource( 9 )

[node name="Santa" type="Sprite" parent="PenguinSprite"]
visible = false
position = Vector2( 33, -38.7 )
scale = Vector2( 4.8, 4.8 )
texture = ExtResource( 10 )

[node name="PoopPoint" type="Node2D" parent="."]
position = Vector2( -65.5865, 39.922 )

[node name="Collision0" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2( 192.978, 2.10751 )
scale = Vector2( 1.25, 1.25 )
polygon = PoolVector2Array( -105.5, -34, -104.3, -31.5, -95.5, -31.5, -95.5, -29.2, -89.5, -21.5, -81.1, -21.5, -79.1, -16.5, -76.7, -16.5, -73.5, -13.3, -73.5, -5.7, -88.5, -3.7, -88.5, -1.5, -103.5, 10.5, -103.5, 28.9, -108.5, 30.9, -108.5, 33.3, -111.7, 36.5, -232.5, 36.5, -232.5, 18.5, -230.5, 18.5, -223.5, 8.5, -221.5, 8.5, -221.5, 0.5, -219.4, 0.5, -203.4, -16.5, -141.5, -16.5, -141.5, -19.5, -139.3, -19.5, -124.5, -34.3, -124.5, -36.5, -105.5, -36.5 )
[connection signal="body_entered" from="." to="." method="_on_PenguinRigidBody_body_entered"]
